--- a/css/style.css
+++ b/css/style.css
@@ -200,3 +200,46 @@ body {
 }
 
 /* social-media section end  */
+
+
+/* subscribe section start  */
+.subscribe {
+
+    padding: 10% 7%;
+    background-image: url(../image/Frame\ 58.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    padding-bottom: 12%;
+}
+
+.subscribe-content {
+    width: 50%;
+}
+
+.subscribe-content .sub_hea {
+    margin-top: 0;
+    font-size: 38px;
+    color: #fafafa;
+}
+
+.subscribe-content .sub_para {
+    color: #fafafa;
+    font-size: 17px;
+    line-height: 1.6;
+    margin-bottom: 60px;
+    font-weight: 500;
+}
+
+.subscribe-content .sub_button {
+
+    text-decoration: none;
+    font-weight: 500;
+    padding: 20px 40px;
+    background-image: linear-gradient(35deg, #FB9048, #FE4A2F);
+    border-radius: 50px;
+    box-shadow: -1px 0px 13px -1px rgb(0 0 0 / 22%);
+    color: white;
+}
+
+/* subscribe section end  */
